--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.alximik.capoeiralyrics">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:icon="@drawable/icon"
             android:label="@string/app_name"
+            android:name=".MainApplication"
             android:theme="@android:style/Theme.Light">
 
         <activity
