--- a/CapoeiraLyrics/AndroidManifest.xml
+++ b/CapoeiraLyrics/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.FavouritesActivity"
+            android:label="@string/activity_name"/>
 
     </application>
 </manifest>
