--- a/CapoeiraLyrics/AndroidManifest.xml
+++ b/CapoeiraLyrics/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.alximik.capoeiralyrics">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
             android:icon="@drawable/icon"
@@ -18,8 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activities.FavouritesActivity"
+            android:label="@string/activity_name"/>
+        <activity
+            android:name=".activities.DetailsViewActivity"
             android:label="@string/activity_name"/>
 
     </application>
