Started details view Added swipe/pager lib to try

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ out/*
 
 /CapoeiraLyrics/libs/ormlite-android-4.41-sources.jar
 /CapoeiraLyrics/libs/ormlite-core-4.41-sources.jar
+/CapoeiraLyrics/libs/SwipeViewDemo/*
