--- a/CapoeiraLyrics/AndroidManifest.xml
+++ b/CapoeiraLyrics/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.alximik.capoeiralyrics">
+          package="com.alximik.capoeiralyrics" android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-            android:icon="@drawable/icon"
+            android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:name=".MainApplication"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
@@ -17,15 +17,22 @@
         <activity
                 android:name=".activities.SongsListActivity"
                 android:label="@string/activity_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+
         </activity>
 
         <activity
             android:name=".activities.FavouritesActivity"
             android:label="@string/activity_name"/>
+        <activity
+                android:name=".activities.SplashScreenActivity"
+                android:label="@string/activity_name"
+                android:noHistory="true"
+                android:theme="@style/Theme.CapoeiraLyrics">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.DetailsViewActivity"
             android:label="@string/activity_name"/>
